# hawk-pytorch

./: README.md  mamba_inner_fn.py  pyproject.toml
.github/workflows/: action.yml
hawk/: __init__.py  cache.py  external.py  hawk.py  scan_fused.py
mamba/: __init__.py  cache.py  causal_conv1d.py  fused_cross_entropy.py  mamba.py  mamba_inner_fn.py  scan_2.py  scan_fused.py
minGRU/: __init__.py  rnn.py  scan.py
