[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minGRU-pytorch"
authors = [{ name = "Benjamin Fattori", email = "fattoribenjamin@gmail.com" }]
version = "1.0.0"
description = "PyTorch implementation of minGRU"
license = { file = "LICENSE" }
dependencies = [
    "torch==2.4.0",
    "einops==0.7.0"
]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/fattorib/hawk-pytorch"

[tool.setuptools]
packages = ["minGRU"]

[tool.setuptools.package-dir]
minGRU = "minGRU"

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "isort==5.13.2",
    "pyright==1.1.378",
]